# jarvis

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
app/: __main__.py  agent.py  ai.py  chat.py  coding_agent.py  exceptions.py  file_helpers.py  jarvis.py  main.py  questions.py  schemas.py
app/agent/: ai.py  coding_agent.py  manager.py
app/ai/: ai.py  coding_assistant.py  manager.py
app/helpers/: chat.py  commands.py  fancy_logging.py  file_helpers.py  processor.py  utils.py
app/memory/: memory.py
app/mocks/: mocked.py
app/prompts/: prompt_generator.py  prompts.py
helpers/: processor.py  utils.py
prompts/: example_prompt.txt  example_prompts.py
tests/: test_questions.py
tests/ai/: test_manager.py
tests/helpers/: test_commands.py  test_processor.py  test_utils.py
tests/mocks/: chat.py  mocked.py
